app/assets/stylesheets/home.css.scss
/* ... */
p.created {
  font-size: 9px;
  text-align: right;
  padding: 0;
  margin: 0;
  margin-top: -35px;
  font-family: Calibri, Tahoma, Arial, Serif!important;
}

.button-fix {
  margin-top: 10px;
  margin-bottom: -5px;
  width: auto;
  height: 40px;
}

.menu {
  display: none;
}

@media only screen and (max-width: 640px) {

  iframe#video-popup {
    height: 200px;
  }
  
  h4.index-heading {
    margin-top: 42px;
    line-height: 0.3;
  }
  
  .close-fix {
    padding-right: 0px!important;
  }

  .wish-form {
    height: 200px;
  }

  .menu {
    display: block;
    width: 100%;
    height: 120px;
    position: relative;
    z-index: 10;
    text-align: center;
    background: #f5f5f5;
    margin-top: 50px;
  }

  .adminlog {
    margin-top: 100px!important;
  }

  .admin_log_icons {
    margin-right: 3px;
  }

  .sidebar a:link, a:visited, a:hover, a:active {
    color: #909090;
  }

  .topbar {
    margin-top: 50px;
  }

  .content-video {
    width: 100%!important;
    height: 170px!important;
    margin-left: auto;
    margin-right: auto;
    margin-top: 4px;
  }

  .content-img {
    width: 100%!important;
    height: 170px!important;
    margin-left: auto;
    margin-right: auto;
    margin-top: 24px;
  }

  .video-container {
    width: 90%!important;
    height: 170px!important;
    margin-left: auto;
    margin-right: auto;
  }

  .content-wrapper {
    width: 80%;
    margin-left: auto;
    margin-right: auto;
  }

  .content, .content-map {
    width: 100%!important;
    height: 166px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 4px;
  }

  .movie-box-wrapper {
    width: 300px!important;
    padding-top: 20px;
    margin-bottom: -25px!important;
    float: none!important;
    margin-left: auto;
    margin-right: auto;
  }

  .centering-fix {
    text-align: center!important;
  }

  .padding-fix {
    padding-left: 15px!important;
    padding-right: 15px!important;
  }
}

@media only screen and (min-width: 640px) and (max-width: 774px) {

  iframe#video-popup {
    height: 200px;
  }
  
  h4.index-heading {
    margin-top: 3px;
    line-height:0.3;
  }

  .close-fix {
    padding-right: 0px!important;
  }

  .wish-form {
    height: 200px;
  }

  .menu {
    display: block;
    width: 100%;
    height: 120px;
    position: relative;
    z-index: 10;
    text-align: center;
    background: #f5f5f5;
    margin-top: 50px;
  }

  .adminlog {
    margin-top: 100px!important;
  }

  .admin_log_icons {
    margin-right: 3px;
  }

  .sidebar a:link, a:visited, a:hover, a:active {
    color: #909090;
  }

  .topbar {
    margin-top: 50px;
  }

  .content-video {
    width: 100%!important;
    height: 170px!important;
    margin-left: auto;
    margin-right: auto;
    margin-top: 24px;
  }

  .content-img {
    width: 100%!important;
    height: 170px!important;
    margin-left: auto;
    margin-right: auto;
    margin-top: 24px;
  }

  .video-container {
    width: 60%!important;
    height: 170px!important;
    margin-left: auto;
    margin-right: auto;
  }
  
  .video-container {
    width: 50%!important;
    height: 210px!important;
  }

  .content-wrapper {
    width: 47%;
    margin-left: auto;
    margin-right: auto;
  }

  .content, .content-map {
    width: 100%!important;
    height: 206px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 24px;
  }

  .movie-box-wrapper {
    width: 600px!important;
    padding-top: 20px;
    float: none!important;
    margin-left: auto;
    margin-right: auto;
  }

  .centering-fix {
    text-align: center!important;
  }

  .padding-fix {
    padding-left: 15px!important;
    padding-right: 15px!important;
  }
}

@media only screen and (min-width: 775px) and (max-width: 946px) {
  .movie-box-wrapper {
    width: 300px!important;
    padding-top: 22px;
  }

  iframe#video-popup {
    height: 300px;
  }
  
  h4.index-heading {
    margin-top: 45px;
    line-height:0.3;
  }
  
  .content-wrapper {
    width: 250px!important;
    margin-left: auto;
    margin-right: auto;
  }

  .content, .content-img, .content-map {
    width: 75%!important;
    height: 157px!important;
    margin-left: auto;
    margin-right: auto;
    margin-top: 5px;
  }

  .content-video{
    width: 95%!important;
    margin-left: auto;
    margin-right: auto;
  }

  .video-container {
    width: 85%!important;
    height: 150px!important;
  }
}

@media only screen and (min-width: 947px) and (max-width: 1024px) {
  
  h4.index-heading {
    margin-top: 33px;
    line-height:0.3;
  }
  
  .movie-box-wrapper {
    width: 368px!important;
  }

  .content-wrapper {
    width: 320px!important;
    margin-left: auto;
    margin-right: auto;
    margin-top: 5px;
  }

  .content, .content-img, .content-map {
    width: 75%!important;
    height: 188px!important;
    margin-left: auto;
    margin-right: auto;
    margin-top: 5px;
  }

  .content-video{
     width: 85%!important;
     margin-left: auto;
     margin-right: auto;
   }

  .video-container {
    height: 187px!important;
    margin-top: 5px;
  }
}
/* ... */

